Delete the legacy desktop JNI implementation
Step 1 of DESKTOP_FFI_REWRITE.md. Removes the desktop MapLibre Native stack
wholesale so the FFI-backed implementation is designed against a clean slate
rather than inheriting JNI assumptions.

Deletes both bindings modules, the maplibre-native and SimpleJNI submodules,
the C++/CMake build, SimpleJNI's KSP wiring, the desktopRenderer/DesktopVariant
native-variant build logic, and the JNI build jobs in CI and release
automation. Desktop keeps only host-independent code; GestureOptions and
RenderOptions lose their MapControls/MapDebugOptions coupling.

Desktop does not compile after this commit, which the plan explicitly allows:
the only error is the missing ComposableMapView actual. Because AGP's KMP lint
and Dokka analyze every target, lint-android and build-docs transitively
compile desktop too, so they join test-desktop and build-desktop-app in
dropping out of all-good until the new implementation lands. The jobs still
run so the branch shows when desktop returns.

In flake.nix, vulkan-loader moves from packages into runtimeLibraries: the
Linux FFI runtime dlopens libvulkan.so.1, which needs LD_LIBRARY_PATH rather
than just build inputs.